--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
         "removeComments": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
-        "noEmitOnError": true,
+        // "noEmitOnError": true,
         "strict": true
-    }
+    },
+    "exclude": [
+        "./tests/*"
+    ]
 }
